# math_video_project

./: .gitignore  .pre-commit-config.yaml  AGENT(1).md  AGENT.md  Drew00h_20260112 03_23_45.xls  LICENSE  README.md  pyproject.toml  run.sh  web.py
.github/workflows/: smoke.yml
Lawofcosinu/: Lawofcosinus.py
Legendre transformation/: Legendre.py
Lorenz/: Untitled-1.ipynb
archive/: hyperbolic_cone_to_cusp_zsurface.py  tools_implementation_plan.md  variables_et_polynomes_v2_simplified.py
experiments/: sort.py
experiments/hairy_ball/: hairy_ball.py
experiments/law_of_cosines/: Lawofcosinus.py
experiments/legendre_transform/: Legendre.py
experiments/lorenz/: lorenz.py
experiments/sketches/: sort.py
experiments/triognometry/: triognometry.py  triognometry_play.py
fourier series/: square_wave.py
function_intuitive_fr/: function_intuitive_scene.py
hyperbolic_cone_to_cusp/: hyperbolic_cone_to_cusp.py  hyperbolic_cone_to_cuspcopy.py
linear/: linear_transform.py
pythagore_whiteboard_fr/: P2.py  README.md  pythagore_scene.py  render_voice_ssml.sh  subtitles_fr.srt
scenes/circle_area/: circle_area_scenes.py
scenes/complete_the_square_fr/: complete_the_square_scene.py
scenes/function_intuitive_fr/: function_intuitive_scene.py
scripts/: grade_audit.py  render.sh  render_all_voices.sh
sigma_sum_whiteboard_fr/: narration_fr.txt  sigma_sum_scene.py  subtitles_fr.srt
tools/: AGENT.md  PDF.py  branding.py  set.py  ssml_sync_check.py  tts.py  webfiller.py
variables_et_polynomes/: V2.py  render_all_voices.sh  variables_et_polynomes_scene.py
(+42 files in other folders)
