[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "math-video-project"
version = "0.1.0"
description = "Manim scenes for a French math-education video series (UQAM)"
requires-python = ">=3.11"
dependencies = [
    "manim>=0.18",
    "manim-voiceover[azure]>=0.3.7",
    "numpy",
    "pandas",
    "xlrd",          # for .xls reading (grade_audit)
    "pyyaml>=6.0",   # tools/ssml rule config
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]   # long lines acceptable in Manim scene files
